[tool.poetry]
name = "vfxim-docs"
version = "0.1.1"
description = "The official repository for the nfa-vfxim documentation."
authors = ["Bo Kamphues <b.kamphues@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
sphinx = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
